--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
     <div class="navBar span-5-10-md hide-on-mobile c" ng-include='"partials/navigation.html"'></div>
     <!-- Love This Container -->
     <div class="span-1-6-xs span-1-6-sm span-1-10-md r">        
-        <a href="https://donate.prazor.com/" target="_blank" class="icon-heart">
+        <a href="https://donate.prazor.com/" target="_blank" class="icon-heart" onclick="window.open(this.href,'_system'); return false;">
             <img src="images/heart_icon.svg">
         </a>
     </div>    
