--- a/partials/userDetails.html
+++ b/partials/userDetails.html
@@ -1,11 +1,11 @@
 <div class="grid">
 	<div class="span-1-1 c top-space">
 		<div class="span-1-6">
-			<p><a href="" onclick="window.history.back(); return false;"><img src="/images/back_arrow_icon.svg"></a></p>
+			<p><a href="" ng-click="quickMenu('genres')"><img src="/images/back_arrow_icon.svg" style="width:75%"></a></p>
 		</div>
 		<div class="span-4-6 no-pad">
 			<a href="" onclick="window.history.back(); return false;">
-				<img src="https://www.prazor.com/images/logo.svg" style="width:50%">
+				<img src="http://www.prazor.com/images/logo.svg" style="width:100%">
 			</a>
 		</div>
 		<div class="span-1-6">&nbsp;</div>
