--- a/partials/userDetails.html
+++ b/partials/userDetails.html
@@ -1,23 +1,29 @@
 <div class="grid">
 	<div class="span-1-1 c top-space">
 		<div class="span-1-6">
-			<p><a href="" ng-click="quickMenu('genres')"><img src="/images/back_arrow_icon.svg" style="width:75%"></a></p>
+			<p><a href="" ng-click="quickMenu('genres')" class="icon-menu"><img src="images/back_arrow_icon.svg"></a></p>
 		</div>
 		<div class="span-4-6 no-pad">
-			<a href="" onclick="window.history.back(); return false;">
-				<img src="http://www.prazor.com/images/logo.svg" style="width:100%">
-			</a>
+			<a class="logo"><img src="images/logo.svg"></a>
 		</div>
 		<div class="span-1-6">&nbsp;</div>
 	</div>
 </div>
+
+
 <div class="grid">
 	<div class="span-1-1">
 		<div class="user-info">
 			<ul class="blocked unstyled vertical-list">
-				<li><a href="https://donate.prazor.com/" target="_blank" class="block color-white" onclick="window.open(this.href,'_system'); return false;">Donations</a></li>
-				<li><a class="block color-white" href="mailto:support@prazor.com" onclick="window.open(this.href,'_system'); return false;">Feedback</a></li>
-				<li><a class="block color-white" href="http://prazor.com/terms" onclick="window.open(this.href,'_system'); return false;">Terms of Use</a></li>
+				<li>
+					<a href="https://donate.prazor.com/" target="_blank" class="block color-white" onclick="window.open(this.href,'_system'); return false;">Donations</a>
+				</li>
+				<li>
+					<a class="block color-white" href="mailto:support@prazor.com" onclick="window.open(this.href,'_system'); return false;">Feedback</a>
+				</li>
+				<li>
+					<a class="block color-white" href="http://prazor.com/terms" onclick="window.open(this.href,'_system'); return false;">Terms of Use</a>
+				</li>
 			</ul>
 		</div>	
 	</div>
