--- a/partials/userDetails.html
+++ b/partials/userDetails.html
@@ -1,5 +1,5 @@
 <div class="grid">
-	<div class="span-1-1 c top-space">
+	<div class="span-1-1 c no-pad">
 		<div class="span-1-6">
 			<p><a href="" ng-click="quickMenu('genres')" class="icon-menu"><img src="images/back_arrow_icon.svg"></a></p>
 		</div>
@@ -16,13 +16,13 @@
 		<div class="user-info">
 			<ul class="blocked unstyled vertical-list">
 				<li>
-					<a href="https://donate.prazor.com/" target="_blank" class="block color-white" onclick="window.open(this.href,'_system'); return false;">Donations</a>
+					<a href="https://donate.prazor.com/" target="_blank" class="block color-white sideBarLinks" onclick="window.open(this.href,'_system'); return false;">Donations</a>
 				</li>
 				<li>
-					<a class="block color-white" href="mailto:support@prazor.com" onclick="window.open(this.href,'_system'); return false;">Feedback</a>
+					<a class="block color-white sideBarLinks" href="mailto:support@prazor.com" onclick="window.open(this.href,'_system'); return false;">Feedback</a>
 				</li>
 				<li>
-					<a class="block color-white" href="http://prazor.com/terms" onclick="window.open(this.href,'_system'); return false;">Terms of Use</a>
+					<a class="block color-white sideBarLinks" href="http://prazor.com/terms" onclick="window.open(this.href,'_system'); return false;">Terms of Use</a>
 				</li>
 			</ul>
 		</div>	
