--- a/scripts/directives/audioPlayerBar/view/audioPlayerBar.html
+++ b/scripts/directives/audioPlayerBar/view/audioPlayerBar.html
@@ -1,13 +1,20 @@
-<div class="grid player-bar no-pad" ng-hide="hidePlayerBar">
+<div class="span-1-1 station-songBar" ng-show="currentStation.station.song.title" ng-hide="hidePlayerBar">
+	<p class="color-white station-songBar__info no-margin">
+		<marquee>
+			<span ng-show="currentStation.station.song.title" class="b" ng-bind-html="currentStation.station.song.title"></span>, 
+			By - <span ng-show="currentStation.station.song.artist" ng-bind-html="currentStation.station.song.artist"></span>, 
+			Album: <span ng-show="currentStation.station.song.album" ng-bind-html="currentStation.station.song.album"></span>
+		</marquee>
+	</p>
+</div>
 
+<div class="grid player-bar no-pad" ng-hide="hidePlayerBar">	
 	<div class="station-info span-4-5-xs span-4-5-sm show-on-mobile no-pad top-space">
 		<div class="color-white show-on-mobile">
 			<div class="span-1-4">
-				<img class="flex-img" ng-src="{{currentStation.station.station_image}}">
+				<img class="flex-img" ng-src="{{currentStation.station.song.cover || currentStation.station.station_image}}">
 			</div>
-			<div class="span-3-4 c no-pad top-space">
-				<p class="color-gold uppercase station-info__name">{{currentStation.station.station_name}}</p>
-			</div>
+			<p class="span-3-4 c no-pad no-margin color-gold uppercase station-info__name align-self-center">{{currentStation.station.station_name}}</p>
 		</div>
 	</div>
 
@@ -26,7 +33,7 @@
 			</li>
 			<li>
 				<a class="span-1-2-xs span-1-3-sm span-1-3-md c playPause" ng-click="playPause()">
-					<img class="player-play-pause stretch" ng-src="images/{{playPauseBtn}}_icon.svg">
+					<img class="player-play-pause" ng-src="images/{{playPauseBtn}}_icon.svg">
 				</a>
 			</li>
 			<li>
