--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,8 +1,9 @@
-<!-- Navigation -->
+<!-- Navigation
 <nav>
 	<ul class="navigation b inline">
-	   <!--  <li><a class="color-gold">My Account</a></li>
+	    <li><a class="color-gold">My Account</a></li>
 		<li><a class="color-gold">Login</a></li>                
-		<li><a class="color-gold">Sign Up</a></li> -->
+		<li><a class="color-gold">Sign Up</a></li>
 	</ul>
 </nav>
+ -->
