--- a/css/styles.css
+++ b/css/styles.css
@@ -287,9 +287,7 @@ ul[rn-carousel] {
 .player-view-large footer{
 	display: none;
 }
-@media only screen and (min-device-width: 768px) {
-	
-}
+
 
 .scrollableX {
     overflow-x: scroll;
@@ -305,7 +303,7 @@ ul[rn-carousel] {
     top: 60px;
 }
 /*Mobile*/
-@media only screen and (max-device-width: 767px) {
+@media only screen and (max-width: 767px) {
 	
 	.hide-on-mobile{display: none;}
 	/* page-sidebar Menu Styles */
@@ -394,7 +392,7 @@ ul[rn-carousel] {
 
 }
 /*Tablet*/
-@media only screen and (min-device-width : 768px) {
+@media only screen and (min-width : 768px) {
 	.page-sidebar{display: none;}
 	.icon-menu img, .icon-heart img{
 		margin-top: .5em
@@ -440,7 +438,7 @@ ul[rn-carousel] {
 }
 
 /*Desktop*/
-@media only screen and (min-device-width: 1025px){
+@media only screen and (min-width: 1025px){
 	.slick-prev {
 		display: block !important;
 	}
