added date back

--- a/scripts/templates/video.html
+++ b/scripts/templates/video.html
@@ -4,6 +4,7 @@
 	</div>
 	<div class="span-10-10 top-space bottom-space">
 		<h3 class="video__title normal color-white">{{video.title.__text}}</h3>
+		<p class="video__pub__date small color-white">{{video.publication_date.__text | date:'MMMM dd yyyy'}}</p>
 	</div>
 	<!--<div class="span-1-1">
 		<a href="" class="video__listen c"><img src="images/listen_icon.svg"> Listen</a>
