--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,8 @@ ul > li{
 	height: 100%;
 }
 
-
+.headerContaner{ position: fixed; background-color: #111; z-index: 9999; }
+.subNavContainer{ margin-top: 110px }
 
 .openSideBar {
     position: absolute;
