video support removal
updating config.xml to test android permissions, removed video support

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,8 @@ ul > li{
 	height: 100%;
 }
 
-.headerContaner{ position: fixed; background-color: #111; z-index: 9999; }
+/*.headerContaner{ position: fixed; background-color: #111; z-index: 9999; }*/
+.subNavContainer{ margin-top: 110px }
 
 .openSideBar {
     position: absolute;
@@ -224,18 +225,6 @@ ul[rn-carousel] {
     white-space: nowrap;
 }
 
-.subcategory__item{
-    display: inline-block;
-}
-.subcategory__item__link{
-	display: block;
-	background: rgba(0,0,0, 0.4);
-	margin: 0 2px;
-    border-radius: 5px 5px 0px 0px;
-}
-.subcategory__item__name{
-	display: block;
-}
 
 /* Video Player*/
 .video{
