--- a/partials/userDetails.html
+++ b/partials/userDetails.html
@@ -1,12 +1,12 @@
 <div class="grid">
 	<div class="span-1-1 c no-pad">
-		<div class="span-1-6">
+		<div class="span-1-6 span-1-10-md">
 			<p><a href="" ng-click="quickMenu('genres')" class="icon-menu"><img src="images/back_arrow_icon.svg"></a></p>
 		</div>
-		<div class="span-4-6 no-pad">
+		<div class="span-4-6 span-8-10-md no-pad">
 			<a class="logo"><img src="images/logo.svg"></a>
 		</div>
-		<div class="span-1-6">&nbsp;</div>
+		<div class="span-1-6 span-1-10-md">&nbsp;</div>
 	</div>
 </div>
 
@@ -15,6 +15,9 @@
 	<div class="span-1-1">
 		<div class="user-info">
 			<ul class="blocked unstyled vertical-list">
+				<li>
+					<a href="" ng-click="quickMenu('genres')" class="block color-white sideBarLinks">All Genres</a>
+				</li>
 				<li>
 					<a href="https://donate.prazor.com/" target="_blank" class="block color-white sideBarLinks" onclick="window.open(this.href,'_system'); return false;">Donations</a>
 				</li>
