--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 body{
 	overflow-x:hidden;
 	background:rgba(0, 0, 0, 10) url("../images/background-lg.jpg") no-repeat right top;
-	-webkit-background-size: cover;
+/*	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 }
 a{
 	text-decoration: none;
@@ -50,6 +50,12 @@ ul > li{
 /*logo*/
 .logo img{
 	width: 90%;
+}
+
+@media only screen and (min-width : 768px) {
+	.logo img{
+		width: 55%;
+	}
 }
 
 /*User Avatar*/
@@ -119,6 +125,10 @@ ul > li{
 /*Nav*/
 nav{
 	margin: 1em auto;
+}
+
+ul.unstyled.vertical-list li{
+	margin-bottom: 1px
 }
 
 /*Stations*/
@@ -393,7 +403,7 @@ ul[rn-carousel] {
 }
 /*Tablet*/
 @media only screen and (min-width : 768px) {
-	.page-sidebar{display: none;}
+	/*.page-sidebar{display: none;}*/
 	.icon-menu img, .icon-heart img{
 		margin-top: .5em
 	}
