--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header>
     <!-- Menu Toggle -->
-    <div class="show-on-mobile span-1-6-xs span-1-6-sm span-1-10-md l">        
-        <a href="#" class="icon-menu" ng-click="quickMenu(quickMenuItem)">
+    <div class="span-1-6-xs span-1-6-sm span-1-10-md  l">        
+        <a href="" class="icon-menu" ng-click="quickMenu(quickMenuItem)">
             <img src="images/{{quickMenuItem}}_icon.svg">
         </a>
     </div>  
@@ -13,14 +13,14 @@
     </div> -->
 
     <!-- Logo Container -->
-    <div class="span-4-6-xs span-4-6-sm span-4-10-md no-pad c">
-        <a class="logo"><img src="images/logo.svg"></a>
+    <div class="span-4-6-xs span-4-6-sm span-8-10-md no-pad c">
+        <a href="" ng-click="quickMenu('back')" class="logo"><img src="images/logo.svg"></a>
     </div>
     <!-- Navigation Container -->
-    <div class="navBar span-5-10-md hide-on-mobile c" ng-include='"partials/navigation.html"'></div>
+    <!-- <div class="navBar span-5-10-md hide-on-mobile c" ng-include='"partials/navigation.html"'></div> -->
     <!-- Love This Container -->
-    <div class="span-1-6-xs span-1-6-sm span-1-10-md r">
-    <a href="https://donate.prazor.com/" target="_blank" class="icon-heart" onclick="window.open(this.href,'_system'); return false;">
+    <div class="span-1-6-xs span-1-6-sm span-1-10-md r align-right">
+        <a href="https://donate.prazor.com/" target="_blank" class="icon-heart" onclick="window.open(this.href,'_system'); return false;">
             <img src="images/heart_icon.svg" alt="Donations">
         </a>
     </div>    
