--- a/partials/userDetails.html
+++ b/partials/userDetails.html
@@ -1,12 +1,16 @@
 <div class="grid">
-	<div class="span-1-1 c no-pad">
-		<div class="span-1-6 span-1-10-md">
+	<div class="span-1-1 no-pad">
+		<div class="span-1-6 l">
 			<p><a href="" ng-click="quickMenu('genres')" class="icon-menu"><img src="images/back_arrow_icon.svg"></a></p>
 		</div>
-		<div class="span-4-6 span-8-10-md no-pad">
-			<a class="logo"><img src="images/logo.svg"></a>
+		<div class="span-4-6 no-pad c">
+			<a href="/" class="logo"><img src="images/logo.svg" alt="Prazor" style="max-height:430px; max-width:350px"></a>
 		</div>
-		<div class="span-1-6 span-1-10-md">&nbsp;</div>
+		<div class="span-1-6 r">
+			<a href="https://donate.prazor.com/" target="_blank" class="icon-heart" title="Donate to Prazor">
+            	<img src="images/heart_icon.svg" alt="Donate to Prazor">
+        	</a>
+		</div>
 	</div>
 </div>
 
@@ -26,6 +30,9 @@
 				</li>
 				<li>
 					<a class="block color-white sideBarLinks" href="http://prazor.com/terms" onclick="window.open(this.href,'_system'); return false;">Terms of Use</a>
+				</li>
+				<li>
+					<a class="block color-white sideBarLinks" href="http://prazor.com/credits" onclick="window.open(this.href,'_system'); return false;">Credits</a>
 				</li>
 			</ul>
 		</div>	
