--- a/scripts/source/modules/stations/views/station-player-view.html
+++ b/scripts/source/modules/stations/views/station-player-view.html
@@ -9,7 +9,7 @@
 	<div class="span-1-1 no-pad">
 		<ul class="carousel-margin" rn-carousel rn-carousel-transition="hexagon"  rn-carousel-index="currentStation.$index" rn-carousel-buffered class="view-carousel">
 			<li class="c" ng-repeat="station in currentStation.stations track by $index">
-				<a>
+				<a href="">
 					<img class="" alt="{{station.station_name}}" ng-src="{{station.station_image}}">
 				</a>		
 			</li>
