--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
-<header>
+<header class="grid">
     <!-- Menu Toggle -->
-    <div class="span-1-6-xs span-1-6-sm span-1-10-md  l">        
-        <a href="" class="icon-menu" ng-click="quickMenu(quickMenuItem)">
+    <div class="span-1-6-xs span-1-6-sm span-1-6-md l">        
+        <a href="#" class="icon-menu" ng-click="quickMenu(quickMenuItem)">
             <img src="images/{{quickMenuItem}}_icon.svg">
         </a>
     </div>  
@@ -13,15 +13,15 @@
     </div> -->
 
     <!-- Logo Container -->
-    <div class="span-4-6-xs span-4-6-sm span-8-10-md no-pad c">
-        <a href="" ng-click="quickMenu('back')" class="logo"><img src="images/logo.svg"></a>
+    <div class="span-4-6-xs span-4-6-sm no-pad span-4-6-md c">
+        <a href="/" class="logo"><img src="images/logo.svg" alt="Prazor" style="max-height:430px; max-width:350px"></a>
     </div>
     <!-- Navigation Container -->
     <!-- <div class="navBar span-5-10-md hide-on-mobile c" ng-include='"partials/navigation.html"'></div> -->
     <!-- Love This Container -->
-    <div class="span-1-6-xs span-1-6-sm span-1-10-md r align-right">
-        <a href="https://donate.prazor.com/" target="_blank" class="icon-heart" onclick="window.open(this.href,'_system'); return false;">
-            <img src="images/heart_icon.svg" alt="Donations">
+    <div class="span-1-6-xs span-1-6-sm span-1-6-md r">        
+        <a href="https://donate.prazor.com/" target="_blank" class="icon-heart">
+            <img src="images/heart_icon.svg">
         </a>
     </div>    
 </header>
