--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -1,6 +1,6 @@
 body{
 	overflow-x:hidden;
-	background:rgba(0, 0, 0, 10) url("../images/background-lg.jpg") no-repeat right top;
+	background:rgba(0, 0, 0, 10) url("../../images/background-lg.jpg") no-repeat right top;
 /*	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -28,7 +28,7 @@ ul > li{
     top: 0;
     left: 80%;
     min-width: 100%;
-    background: rgba(0, 0, 0, 10) url("../images/background-lg.jpg") no-repeat right top;
+    background: rgba(0, 0, 0, 10) url("../../images/background-lg.jpg") no-repeat right top;
     box-shadow: 0px 0px 10px 0px #000;
     height: auto;
 }
@@ -38,6 +38,10 @@ ul > li{
     padding: 10px;
     font-size: 16px;
     background-color: rgba(255,255,255, 0.25);
+}
+
+ul.unstyled.vertical-list li {
+    margin-bottom: 1px;
 }
 
 .playerMargin {
@@ -50,12 +54,6 @@ ul > li{
 /*logo*/
 .logo img{
 	width: 90%;
-}
-
-@media only screen and (min-width : 768px) {
-	.logo img{
-		width: 55%;
-	}
 }
 
 /*User Avatar*/
@@ -127,10 +125,6 @@ nav{
 	margin: 1em auto;
 }
 
-ul.unstyled.vertical-list li{
-	margin-bottom: 1px
-}
-
 /*Stations*/
 .station-header .station-details{
 	margin-top: -2em;
@@ -165,7 +159,7 @@ ul.unstyled.vertical-list li{
 
 /*Player Bar*/
 .player-bar {
-    background: #666 none repeat scroll 0 0;
+    background: rgba(45, 45, 45, 0.95) none repeat scroll 0 0;
     bottom: 0;
     position: fixed;
     width: 100%;
@@ -312,8 +306,20 @@ ul[rn-carousel] {
     left: 40%;
     top: 60px;
 }
+
+.dark-grey-line{
+  border-color: #555
+}
+
+.slaask-button{
+	bottom: 125px !important;
+}
 /*Mobile*/
 @media only screen and (max-width: 767px) {
+
+.view-genres > li > a > span {
+    font-size: 14px;
+}
 	
 	.hide-on-mobile{display: none;}
 	/* page-sidebar Menu Styles */
@@ -352,17 +358,16 @@ ul[rn-carousel] {
 		line-height: 1em;
 	}
 	.player-view-small .previous, .player-view-small .forward, 
-	.player-view-small .player-subtitle,
-	.player-view-large .station-info{
+	.player-view-small .player-subtitle{
 		display:none !important;
 	}
 	.player-view-small .playPause{
 		width: 100%;
 	}
-	.player-view-large .player-bar{
-		background:none;
-    	bottom: 10px;
-	}
+	// .player-view-large .player-bar{
+	// 	background:none;
+ //    	bottom: 10px;
+	// }
 	.player-view-large .player-volume-control{
 		display: block;
 	}
@@ -389,9 +394,9 @@ ul[rn-carousel] {
 	.player-bar{
 		height: 85px;
 	}
-	.player-view-large .player-bar{
-    	height: 30%;
-	}
+	// .player-view-large .player-bar{
+ //    	// height: 30%;
+	// }
 	
 	.station-songBar{		
 	    bottom: 85px;
@@ -439,7 +444,7 @@ ul[rn-carousel] {
 		margin-top: 1em;
 	}
 	.player-bar{
-		height: 100px;
+		height: 114px;
 	}
 	.station-songBar{
 		bottom: 100px;
