--- a/scripts/source/modules/genres/views/genres.html
+++ b/scripts/source/modules/genres/views/genres.html
@@ -1,8 +1,8 @@
 
-<ul class="view-genres">
+<ul class="view-genres grid">
 	<li class="span-1-2-xs span-1-2-sm span-1-3-md span-1-4-lg c align-left" ng-repeat="genre in genres">
 		<a ng-click="setGenre(genre)" class="color-white light-box">
-			<img class="stretch" ng-src="images/genre_{{genre.title}}.svg">
+			<img class="stretch" ng-src="http://prazor.com/images/genre_{{genre.title}}.svg">
 			<span class="upperCase b block">{{genre.title}}</span>
 		</a>		
 	</li>
